[gd_scene load_steps=2 format=3 uid="uid://cc8rkbl8n2ma5"]

[ext_resource type="Script" path="res://scripts/hud.gd" id="1_6mm4p"]

[node name="HUD" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_6mm4p")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PlayerStat" type="HBoxContainer" parent="CanvasLayer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 2

[node name="HP" type="Label" parent="CanvasLayer/VBoxContainer/PlayerStat"]
layout_mode = 2
text = "100"
vertical_alignment = 1

[node name="Points" type="Label" parent="CanvasLayer/VBoxContainer/PlayerStat"]
layout_mode = 2
size_flags_horizontal = 10
text = "000"
horizontal_alignment = 2
vertical_alignment = 1

[node name="WeaponStat" type="HBoxContainer" parent="CanvasLayer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 10
alignment = 2

[node name="Amo" type="Label" parent="CanvasLayer/VBoxContainer/WeaponStat"]
layout_mode = 2
size_flags_horizontal = 2
text = "8 / 10"
vertical_alignment = 1

[node name="CurrentWeapon" type="Label" parent="CanvasLayer/VBoxContainer/WeaponStat"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 8
text = "CurrentWeapon
"
horizontal_alignment = 2
vertical_alignment = 1
